--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -1,125 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="keywords" content="SignUp, Login, Register">
+    <meta name="keywords" content="Sign up, Sign in">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iam- Login</title>
+    <!--Bootstrap Css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <!--Font-aweome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!--Custom Css-->
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../static/css/signin.css">
+    <script src="../static/js/signin.js"></script>
+
 </head>
+
 <body>
-<!-- LOGIN MODULE -->
-<div class="login">
-    <div class="wrap">
-
-        <!-- LOGIN FORM -->
-        <div class="user">
-            <!-- ACTIONS
-            <div class="actions">
-                <a class="help" href="#signup-tab-content">Sign Up</a><a class="faq" href="#login-tab-content">Login</a>
+<section class="login_section">
+    <div class="container outer_container accounts_container">
+        <div class="row h-100">
+            <div class="col col-sm-12 col-md-12 col-lg-8 m-0 p-0 w-100 h-100 accounts_col">
+                <div class="accounts_image w-100 h-100">
+                    <img src="https://img.freepik.com/free-photo/social-media-instagram-digital-marketing-concept-3d-rendering_106244-1717.jpg?t=st=1647414398~exp=1647414998~hmac=2c478ef6affd973ccd71ea4d394d9283db4a0c6c4c686ba0b9f6091c8a56e5a1&w=1480" alt="accounts_image" class="img-fluid w-100 h-100" />
+                </div>
+                <!--accounts_image 이미지 사이즈 861 558-->
             </div>
-            -->
-            <!-- LOGO -->
-            <div class="logo">
-                <a href="#"><img src="http://res.cloudinary.com/dpcloudinary/image/upload/v1506186248/logo.png" alt=""></a>
-            </div>
-            <!-- TOGGLE -->
-            <div id="toggle-wrap">
-                <div id="toggle-terms">
-                    <div id="cross">
-                        <span></span>
-                        <span></span>
+            <!--account_col-->
+            <div class="col col-sm-12 col-md-12 col-lg-4 m-0 p-0 accounts_col">
+                <div class="accounts_forms signup_form w-100 h-100" id="signup">
+                    <div class="title mt-4 p-4 w-100">
+                        <h1>Sign Up</h1>
+                        <p class="mt-3"> </p>
                     </div>
-                </div>
-            </div>
-            <!-- TERMS -->
-            <div class="terms">
-                <h2>dp Terms of Service</h2>
-                <p class="small">Last modified: September 23, 2017</p>
-                <h3>Welcome to dp</h3>
-                <p>By using our Services, you are agreeing to these terms. Please read them carefully.</p>
-                <p>Our Services are very diverse, so sometimes additional terms or product requirements (including age requirements) may apply. Additional terms will be available with the relevant Services, and those additional terms become part of your agreement with us if you use those Services.</p>
-                <h3>Using our Services</h3>
-                <p>You must follow any policies made available to you within the Services.</p>
-                <p>Using our Services does not give you ownership of any intellectual property rights in our Services or the content you access. You may not use content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. Don’t remove, obscure, or alter any legal notices displayed in or along with our Services.</p>
-                <p>In connection with your use of the Services, we may send you service announcements, administrative messages, and other information. You may opt out of some of those communications.</p>
-                <h3>Your dp Account</h3>
-                <p>You may need a dp Account in order to use some of our Services. You may create your own dp Account, or your dp Account may be assigned to you by an administrator, such as your employer or educational institution. If you are using a dp Account assigned to you by an administrator, different or additional terms may apply and your administrator may be able to access or disable your account.</p>
-                <p>To protect your dp Account, keep your password confidential. You are responsible for the activity that happens on or through your dp Account. Try not to reuse your dp Account password on third-party applications.</p>
-                <h3>Privacy and Copyright Protection</h3>
-                <p>dp’s privacy policies explain how we treat your personal data and protect your privacy when you use our Services. By using our Services, you agree that dp can use such data in accordance with our privacy policies.</p>
-                <p>We respond to notices of alleged copyright infringement and terminate accounts of repeat infringers according to the process set out in the U.S. Digital Millennium Copyright Act.</p>
-                <p>We provide information to help copyright holders manage their intellectual property online. If you think somebody is violating your copyrights and want to notify us, you can find information about submitting notices and dp’s policy about responding to notices in our Help Center.</p>
-                <h3>Modifying and Terminating our Services</h3>
-                <p>We are constantly changing and improving our Services. We may add or remove functionalities or features, and we may suspend or stop a Service altogether.</p>
-                <p>You can stop using our Services at any time, although we’ll be sorry to see you go. dp may also stop providing Services to you, or add or create new limits to our Services at any time.</p>
-                <p>We believe that you own your data and preserving your access to such data is important. If we discontinue a Service, where reasonably possible, we will give you reasonable advance notice and a chance to get information out of that Service.</p>
-                <h3>Our Warranties and Disclaimers</h3>
-                <p>We provide our Services using a commercially reasonable level of skill and care and we hope that you will enjoy using them. But there are certain things that we don’t promise about our Services.</p>
-                <p>OTHER THAN AS EXPRESSLY SET OUT IN THESE TERMS OR ADDITIONAL TERMS, NEITHER dp NOR ITS SUPPLIERS OR DISTRIBUTORS MAKE ANY SPECIFIC PROMISES ABOUT THE SERVICES. FOR EXAMPLE, WE DON’T MAKE ANY COMMITMENTS ABOUT THE CONTENT WITHIN THE SERVICES, THE SPECIFIC FUNCTIONS OF THE SERVICES, OR THEIR RELIABILITY, AVAILABILITY, OR ABILITY TO MEET YOUR NEEDS. WE PROVIDE THE SERVICES “AS IS”.</p>
-                <p>SOME JURISDICTIONS PROVIDE FOR CERTAIN WARRANTIES, LIKE THE IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. TO THE EXTENT PERMITTED BY LAW, WE EXCLUDE ALL WARRANTIES.</p>
-                <h3>Liability for our Services</h3>
-                <p>WHEN PERMITTED BY LAW, dp, AND dp’S SUPPLIERS AND DISTRIBUTORS, WILL NOT BE RESPONSIBLE FOR LOST PROFITS, REVENUES, OR DATA, FINANCIAL LOSSES OR INDIRECT, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES.</p>
-                <p>TO THE EXTENT PERMITTED BY LAW, THE TOTAL LIABILITY OF dp’S, AND ITS SUPPLIERS AND DISTRIBUTORS, FOR ANY CLAIMS UNDER THESE TERMS, INCLUDING FOR ANY IMPLIED WARRANTIES, IS LIMITED TO THE AMOUNT YOU PAID US TO USE THE SERVICES (OR, IF WE CHOOSE, TO SUPPLYING YOU THE SERVICES AGAIN).</p>
-                <p>IN ALL CASES, dp, AND ITS SUPPLIERS AND DISTRIBUTORS, WILL NOT BE LIABLE FOR ANY LOSS OR DAMAGE THAT IS NOT REASONABLY FORESEEABLE.</p>
-                <h3>About these Terms</h3>
-                <p>We may modify these terms or any additional terms that apply to a Service to, for example, reflect changes to the law or changes to our Services. You should look at the terms regularly. We’ll post notice of modifications to these terms on this page. We’ll post notice of modified additional terms in the applicable Service. Changes will not apply retroactively and will become effective no sooner than fourteen days after they are posted. However, changes addressing new functions for a Service or changes made for legal reasons will be effective immediately. If you do not agree to the modified terms for a Service, you should discontinue your use of that Service.</p>
-                <p>If you do not comply with these terms, and we don’t take action right away, this doesn’t mean that we are giving up any rights that we may have (such as taking action in the future).</p>
-                <p>The laws of California, U.S.A., excluding California’s conflict of laws rules, will apply to any disputes arising out of or relating to these terms or the Services. All claims arising out of or relating to these terms or the Services will be litigated exclusively in the federal or state courts of Santa Clara County, California, USA, and you and dp consent to personal jurisdiction in those courts.</p>
-                <p>For information about how to contact dp, please visit our contact page.</p>
-            </div>
-
-            <!-- RECOVERY -->
-            <div class="recovery">
-                <h2>Password Recovery</h2>
-                <p>Enter either the <strong>email address</strong> or <strong>username</strong> on the account and <strong>click Submit</strong></p>
-                <p>We'll email instructions on how to reset your password.</p>
-                <form class="recovery-form" action="" method="post">
-                    <input type="text" class="input" id="user_recover" placeholder="Enter Email or Username Here">
-                    <input type="submit" class="button" value="Submit">
-                </form>
-                <p class="mssg">An email has been sent to you with further instructions.</p>
-            </div>
-
-            <!-- FORM -->
-            <div class="form-wrap">
-                <!-- TABS -->
-                <div class="tabs">
-                    <h3 class="login-tab"><a class="log-in active" href="#login-tab-content"><span>Login<span></a></h3>
-                    <h3 class="signup-tab"><a class="sign-up" href="#signup-tab-content"><span>Sign Up</span></a></h3>
-                </div>
-                <!-- TABS CONTENT -->
-                <div class="tabs-content">
-                    <!-- TABS CONTENT LOGIN -->
-                    <div id="login-tab-content" class="active">
-                        <form class="login-form" action="" method="post">
-                            <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Email or Username">
-                            <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-                            <input type="checkbox" class="checkbox" checked id="remember_me">
-                            <label for="remember_me">Remember me</label>
-                            <input type="submit" class="button" value="Login">
-                        </form>
-                        <div class="help-action">
-                            <p><i class="fa fa-arrow-left" aria-hidden="true"></i><a class="forgot" href="#">Forgot your password?</a></p>
+                    <!--title-->
+                    <form method="post" name="form" class="form w-100 p-4" id="form">
+                        <div class="row">
+                            <div class="col col-sm-12 col-md-12 col-lg-6 m-0">
+                                <div class="form-group">
+                                    <label for="fname">Firstname</label>
+                                    <input type="text" name="fname" class="form-control" id="fname" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                                </div>
+                            </div>
+                            <div class="col col-sm-12 col-md-12 col-lg-6 m-0">
+                                <div class="form-group">
+                                    <label for="lname">Lastname</label>
+                                    <input type="text" name="lname" class="form-control" id="lname" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <!-- TABS CONTENT SIGNUP -->
-                    <div id="signup-tab-content">
-                        <form class="signup-form" action="" method="post">
-                            <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
-                            <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
-                            <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-                            <input type="submit" class="button" value="Sign Up">
-                        </form>
-                        <div class="help-action">
-                            <p>By signing up, you agree to our</p>
-                            <p><i class="fa fa-arrow-left" aria-hidden="true"></i><a class="agree" href="#">Terms of service</a></p>
+                        <!--form-row-->
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" class="form-control" id="email" onfocus="labelUp(this)" onblur="labelDown(this)" required />
                         </div>
+                        <div class="form-group">
+                            <label for="signup_password">Password</label>
+                            <i class="fa fa-eye-slash" id="eye_icon_signup"></i>
+                            <input type="password" name="pass" class="form-control" id="signup_password" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="cpass">Confirm Password</label>
+                            <input type="password" name="cpass" class="form-control" id="cpass" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary register_btn w-100">Sign Up</button>
+                        </div>
+                    </form>
+
+                    <div class="already_member_box">
+                        <p class="text-center" id="to_login">I am already member</p>
                     </div>
                 </div>
+                <!--accounts_forms-->
+                <div class="accounts_forms  w-100 h-100" id="login">
+                    <div class="title  mt-4 p-4 w-100">
+                        <h1>Sign In</h1>
+                        <p class="mt-3">IAM 로그인 페이지 드가자~ </p>
+                    </div>
+                    <!--title-->
+                    <form method="post" name="form" class="form  w-100 p-4" id="form">
+                        <div class="form-group">
+                            <label for="email">ID</label>
+                            <input type="email" name="email" class="form-control" id="email" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="login_password">Password</label>
+                            <i class="fa fa-eye-slash" id="eye_icon_login"></i>
+                            <input type="password" name="pass" class="form-control" id="login_password" onfocus="labelUp(this)" onblur="labelDown(this)" required />
+                        </div>
+                        <div class="form-group mb-0">
+                            <button type="submit" class="btn btn-primary register_btn w-100">Sign In</button>
+                        </div>
+                    </form>
+
+                    <div class="already_member_box d-flex justify-content-between px-4">
+                        <input type="checkbox" class="checkbox" checked id="remember_me">
+                        <label for="remember_me">Remember me</label>
+                        <span class="text-center" id="to_signup">Create an account?</span>
+                        <span class="text-center">Forgot password</span>
+                    </div>
+                </div>
+                <!--accounts_forms-->
             </div>
+            <!--account_col-->
         </div>
+        <!--row-->
     </div>
-</div>
+    <!--accounts_container-->
+</section>
+<!--login_section-->
 
+<!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+<!--Custom Js-->
+<script type="text/javascript" src="js/app.js"></script>
 
-Resources
 </body>
+
 </html>
